skins/classic/common.css
/* ... */
.popupmenu ul
{
  margin: -4px 0;
  padding: 0;
  list-style: none;
}

.popupmenu ul li
{
  font-size: 11px;
  white-space: nowrap;
  min-width: 100px;
  margin: 3px -4px;
}

.popupmenu li a
{
  display: block;
  color: #a0a0a0;
  padding: 2px 10px;
  text-decoration: none;
  min-height: 14px;
  background: transparent;
}

.popupmenu li a.active,
.popupmenu li a.active:active,
.popupmenu li a.active:visited
{
  color: #333;
}

.popupmenu li a.active:hover,
.popupmenu.selectable li a.selected:hover
{
  color: #fff;
  background-color: #c00;
}

.popupmenu li.block input
{
  float: left;
}

.popupmenu.selectable li a.selected
{
  background: url(images/messageicons.png) 2px -372px no-repeat;
}

.popupmenu.selectable li a
{
  padding-left: 20px;
}

.darkbg
{
  background-color: #F2F2F2 !important;
}

.dropbutton,
.dropbutton span
{
  float: left;
  height: 32px;
}

.dropbutton:hover
{
/*  background: url(images/dbutton.png) 0 0 no-repeat transparent; */
}

.dropbutton span
{
  width: 9px;
  background: url(images/dbutton.png) -53px 0 no-repeat transparent;
}

.dropbutton span:hover
{
  cursor: pointer;
  background-position: -74px 0;
}

img.uploading
{
  width: 16px;
  height: 16px;
}

/***** common table settings ******/

table.records-table thead tr td
{
  height: 20px;
  padding: 0px 4px 0px 4px;
  vertical-align: middle;
  border-bottom: 1px solid #999999;
  color: #333333;
  background: url(images/listheader.gif) top left repeat-x #CCC;
  font-size: 11px;
  font-weight: bold;
}

table.records-table tbody tr td
{
  height: 16px;
  padding: 2px 4px 2px 4px;
  font-size: 11px;
  white-space: nowrap;
  border-bottom: 1px solid #EBEBEB;
  overflow: hidden;
  text-align: left;  
}

table.records-table tr
{
  background-color: #FFFFFF;
}

table.records-table tr.selected td
{
  color: #FFFFFF;
  background-color: #CC3333;
}

table.records-table tr.focused td
{
}

table.records-table tr.unfocused td
{
  color: #FFFFFF;
  background-color: #929292;
}

ul.treelist li div.treetoggle
{
  position: absolute;
  left: 8px !important;
  left: -16px;
  top: 1px;
  width: 14px;
  height: 16px;
  cursor: pointer;
}

ul.treelist li div.collapsed
{
  background: url(images/icons/collapsed.png) bottom right no-repeat;
}

ul.treelist li div.expanded
{
  background: url(images/icons/expanded.png) bottom right no-repeat;
}


/***** mac-style quicksearch field *****/

#quicksearchbar
{
  position: absolute;
  top: 55px;
  right: 10px;
  width: 190px;
  height: 20px;
  text-align: right;
  background: url(images/searchfield.gif) top left no-repeat;
}

#searchreset
{
  position: absolute;
  top: 3px;
  right: 12px;
  text-decoration: none;
}

#searchmenulink
{
 position: absolute;
 top: 3px;
 right: 168px;
}

#quicksearchbar img
{
  vertical-align: middle;
}

#quicksearchbox
{
  position: absolute;
  top: 2px;
  left: 24px;
  width: 140px;
  height: 15px;
  font-size: 11px;
  padding: 0px;
  border: none;
  outline: none;
}

/***** roundcube webmail pre-defined classes *****/

#rcmversion
{
  position: absolute;
  bottom: 10px;
  right: 20px;
  text-align: right;
  white-space: nowrap;
  font-size: 8pt;
  color: #999;
}

#rcmdraglayer
{
  min-width: 300px;
  width: auto !important;
  width: 300px;
  border: 1px solid #999999;
  background-color: #fff;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 3px;
  padding-bottom: 3px;
  font-size: 11px;
  white-space: nowrap;
  opacity: 0.82;
  border-radius: 3px;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-box-shadow: 1px 1px 12px #999;
  -webkit-box-shadow: #999 1px 1px 12px;
}

.draglayercopy:before
{
  position: absolute;
  bottom: -5px;
  left: -6px;
  content: " ";
  width: 14px;
  height: 14px;
  background: url(images/messageactions.png) -2px -128px no-repeat;
}

a.rcmContactAddress
{
  text-decoration: none;
}

a.rcmContactAddress:hover
{
  text-decoration: underline;
}

#rcmKSearchpane
{
  background-color: #F9F9F9;
  border: 1px solid #CCCCCC;
}

#rcmKSearchpane ul
{
  margin: 0px;
  padding: 2px;
  list-style-image: none;
  list-style-type: none;
}

#rcmKSearchpane ul li
{
  display: block;
  height: 16px;
  font-size: 11px;
  padding-left: 6px;
  padding-top: 2px;
  padding-right: 6px;
  white-space: nowrap;
  cursor: pointer;
}

#rcmKSearchpane ul li.selected
{
  color: #ffffff;
  background-color: #CC3333;
}

#login-form
{
  margin-left: auto;
  margin-right: auto;
  margin-top: 50px;
  width: 400px;
  border: 1px solid #999;
}

#login-form table td.title
{
  text-align: right;
  white-space: nowrap;
}

#login-form table
{
  width: 1%;
  margin: auto;
}

#login-form table td.input input
{
  width: 200px;
}

#login-bottomline
{
	width: 400px;
	margin: 5em auto;
	font-size: 85%;
	text-align: center;
	color: #666;
}

#login-noscriptwarning
{
	margin: 2em auto 0 auto;
	width: 400px;
	color: #cf2734;
	font-weight: bold;
}

#console
{
  opacity: 0.8;
}

.disabled,
a.disabled
{
  color: #999;
}

font.bold
{
  font-weight: bold;
}


/***** onclick menu list *****/

ul.toolbarmenu
{
  margin: -4px 0 -4px 0;
  padding: 0;
  list-style: none;
}

ul.toolbarmenu li
{
  font-size: 11px;
  white-space: nowrap;
  min-width: 130px;
  margin: 2px -4px;
}

ul.toolbarmenu li a
{
  display: block;
  color: #a0a0a0;
  padding: 1px 12px 3px 28px;
  text-decoration: none;
  min-height: 14px;
}

ul.toolbarmenu li a.active,
ul.toolbarmenu li a.active:active,
ul.toolbarmenu li a.active:visited
{
  color: #333;
}

ul.toolbarmenu li input
{
  vertical-align: middle;
}

ul.toolbarmenu li hr
{
  color: #ccc;
  width: 130px;
  height: 1px;
  margin: 2px 1px 2px 1px;
}

ul.toolbarmenu li img
{
  float: left;
  margin: 0 2px;
}

div.popupmenu ul li.separator_below,
ul.toolbarmenu li.separator_below
{
  border-bottom: 1px solid #ccc;
  margin-bottom: 2px;
  padding-bottom: 2px;
}

div.popupmenu ul li.separator_above,
ul.toolbarmenu li.separator_above
{
  border-top: 1px solid #ccc;
  margin-top: 2px;
  padding-top: 2px;
}

#searchmenu
{
  width: 160px;
}
/* ... */

